; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_branch_has_merge_config.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_branch_has_merge_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.branch = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @branch_has_merge_config(%struct.branch* %0) #0 {
  %2 = alloca %struct.branch*, align 8
  store %struct.branch* %0, %struct.branch** %2, align 8
  %3 = load %struct.branch*, %struct.branch** %2, align 8
  %4 = icmp ne %struct.branch* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.branch*, %struct.branch** %2, align 8
  %7 = getelementptr inbounds %struct.branch, %struct.branch* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = xor i1 %10, true
  br label %12

12:                                               ; preds = %5, %1
  %13 = phi i1 [ false, %1 ], [ %11, %5 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
